[package]
name = "physics-test"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
clap = "4.4.10"
color-eyre = "0.6.2"
fake = "2.9.1"
hecs = { version = "0.10.4", features = ["serde"] }
itertools = "0.12.0"
macroquad = "0.4.4"
serde = "1.0.193"
thiserror = "1.0.50"
tokio = "1.34.0"
